part-1/111/manifests/service_logoutput.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-v11-svc
spec:
  type: ClusterIP
  selector:
    app: ex-11
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3333
