part-1/111/manifests/service_pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-v2-svc
spec:
  type: ClusterIP
  selector:
    app: ex-11
  ports:
    - port: 1111
      protocol: TCP
      targetPort: 5555
